--- a/gridThree.html
+++ b/gridThree.html
@@ -65,7 +65,7 @@
         <div class="container h-100 minHeight">
             <ul class="nav nav-pills mb-1">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="gridThree.html">Grid Three</a>
+                    <a class="nav-link active" aria-current="page" href="gridThree.html">Grid 3</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="gridThreeB.html">Grid Three B</a>
@@ -82,7 +82,7 @@
                 <div class="col-5 d-flex flex-column justify-content-evenly h-100 ">
                     <!-- RIGHT COLUMN TOP -->
                     <div class="text-light ps-2 overflow-auto h-50 bg-secondary ">
-                        
+
                     </div>
                     <!-- RIGHT COLUMN BOTTOM -->
                     <div class="bg-dark text-light ps-2 pb-5 h-50 overflow-hidden mt-2">
